googleApi is ready
